--- a/old/Basics/main.html
+++ b/old/Basics/main.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+   <form id="frm">
+    <label for="a">a</label>
+    <input type="text" name="a" id="a" />
+    <label for="b">b</label>
+    <input type="number" name="b" id="b"/>
+    <button type="submit" id="submit">Submit</button>
+   </form>
     <script src="basics.js"></script>
   </body>
 </html>
